fix Menu collapsed

--- a/src/components/menu/style.styl
+++ b/src/components/menu/style.styl
@@ -98,6 +98,7 @@
 
 .d-sub-menu-children-position
   position fixed
+  z-index 100
   padding 8px
   background-color var(--theme)
   border-radius 8px
@@ -112,6 +113,7 @@
 
 .d-sub-menu-children-collapsed
   position fixed
+  z-index 100
   padding 8px
   background-color var(--theme)
   border-radius 8px
